# rust_rest

./: .env  .releaserc  CHANGELOG.md  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: release.yml
backend/: Cargo.toml
backend/src/: main.rs
backend/src/models/: user.rs
develop_only/pgadmin/: pgadmin  servers.json
